Perkin-UAT/force-app/main/default/objects/SMAX_PS_Depot_Plant__c/SMAX_PS_Depot_Plant__c.object-meta.xml
<CustomObject>
    <label>Depot Plant</label>
    <nameField>
        <displayFormat>DP-{000000}</displayFormat>
        <label>Depot Plant</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Depot Plants</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>