Perkin-UAT/force-app/main/default/objects/SMAX_PS_Depot_Plant__c/fields/SMAX_PS_Country__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Country__c</fullName>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>