Perkin-UAT/force-app/main/default/objects/SMAX_PS_Depot_Plant__c/fields/SMAX_PS_Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Plant_Code__c</fullName>
    <label>Plant Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>