Perkin-UAT/force-app/main/default/objects/SMAX_PS_Depot_Plant__c/fields/SMAX_PS_Plant_Location__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Plant_Location__c</fullName>
    <label>Plant Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>