Perkin-UAT/force-app/main/default/objects/SMAX_PS_Depot_Plant__c/fields/SMAX_PS_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Sales_Org__c</fullName>
    <label>Sales Org</label>
    <length>10</length>
    <type>Text</type>
</CustomField>