Perkin-UAT/force-app/main/default/objects/SMAX_PS_Depot_Plant__c/fields/SMAX_PS_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>Depot Plants</relationshipLabel>
    <relationshipName>Depot_Plants</relationshipName>
    <type>Lookup</type>
</CustomField>