Perkin-UAT/force-app/main/default/objects/SMAX_PS_Depot_Plant__c/fields/SVMX_PS_Is_Default__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>