Perkin-UAT/force-app/main/default/objects/SMAX_PS_Depot_Plant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_Depot_Technician__c</columns>
    <columns>SMAX_PS_Country__c</columns>
    <columns>SMAX_PS_Plant_Code__c</columns>
    <columns>SMAX_PS_Sales_Org__c</columns>
    <columns>SVMX_PS_Is_Default__c</columns>
    <columns>SMAX_PS_Owned_By_Company__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>